Blockbase: Fix gap on image-no-margin utility class when image has a hyperlink (#4209)
* Blockbase: Apply image-no-margin alignment to all children

* Blockbase: Update image-no-margin comment

--- a/blockbase/assets/ponyfill.css
+++ b/blockbase/assets/ponyfill.css
@@ -116,7 +116,7 @@ p, h1, h2, h3, h4, h5, h6 {
 	margin: 0;
 }
 
-.image-no-margin > * {
+.image-no-margin * {
 	vertical-align: bottom;
 }
 
